This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Compile error for a number of Mac modules with recent Xcode
Type: compile error Stage: resolved
Components: Build, macOS Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: ronaldoussoren Nosy List: ned.deily, python-dev, ronaldoussoren
Priority: normal Keywords: needs review

Created on 2012-08-25 10:05 by ronaldoussoren, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
miscompile-mac-modules.txt ronaldoussoren, 2012-08-25 10:05
Messages (3)
msg169123 - (view) Author: Ronald Oussoren (ronaldoussoren) * (Python committer) Date: 2012-08-25 10:05
Recent versions of Xcode on OSX 10.7 and 10.8 fail to compile 3 of the extension modules in Mac/Modules: the modules for fm, qd and qdoffs.

That's because those extensions wrap APIs that are long deprecated and are no longer present.

The attached patch "fixes" the miscompilation by making most of the body of the extension empty when compiling with the 10.7 (or later) SDK.

This changes the API of these extension modules, but that cannot be helped because the platform APIs that are wrapped by these extensions are no longer present.

(Patch is not relevant for python 3.x because these extensions have been removed in python 3.0)
msg179527 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-01-10 06:05
New changeset ae1d34142a2a by Ned Deily in branch '2.7':
Issue #15782: Prevent compile errors of OS X Carbon modules _Fm, _Qd, and
http://hg.python.org/cpython/rev/ae1d34142a2a
msg179528 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2013-01-10 06:09
LGTM.  I've committed the patch along with expanded warnings in the Standard Library doc pages for "Mac OS X specific services" and "Mac OS Toolbox Modules".
History
Date User Action Args
2022-04-11 14:57:35adminsetgithub: 59986
2013-01-10 06:09:05ned.deilysetstatus: open -> closed
resolution: fixed
messages: + msg179528

stage: patch review -> resolved
2013-01-10 06:05:25python-devsetnosy: + python-dev
messages: + msg179527
2012-08-25 10:05:30ronaldoussorencreate